# cpp-image-effects

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: effects.cpp  effects.h  images.cpp  images.h  main.cpp
